// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature Grid block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-feature-grid ugb-feature-grid ugb-feature-grid--columns-1 ugb-feature-grid--design-design className"
>
  <div
    className="ugb-feature-grid__item ugb--shadow-1"
    style={
      Object {
        "borderRadius": 6,
      }
    }
  >
    <div
      className="ugb-feature-grid__image"
    >
      <img
        alt="title1"
        src="https://imageUrl1.com"
        style={
          Object {
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className="ugb-feature-grid__content"
    >
      <h5
        className="ugb-feature-grid__title"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "title1",
            }
          }
        />
      </h5>
      <p
        className="ugb-feature-grid__description"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "description1",
            }
          }
        />
      </p>
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-buttonSize ugb-button--design-buttonDesign ugb-button--has-icon"
          href="linkUrl1"
          style={
            Object {
              "backgroundColor": "#123456",
              "borderColor": undefined,
              "borderRadius": "2px",
              "color": "#123456",
            }
          }
          target="_blank"
        >
          <span
            className="ugb-button--inner"
            style={
              Object {
                "color": "#123456",
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "linkText1",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feature Grid block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-feature-grid ugb-feature-grid ugb-feature-grid--columns-3"
>
  <div
    className="ugb-feature-grid__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    <div
      className="ugb-feature-grid__content"
    >
      <h5
        className="ugb-feature-grid__title"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h5>
      <p
        className="ugb-feature-grid__description"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-normal ugb-button--design-link"
          href=""
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": undefined,
              "borderRadius": undefined,
              "color": undefined,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "color": undefined,
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Button text",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    className="ugb-feature-grid__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    <div
      className="ugb-feature-grid__content"
    >
      <h5
        className="ugb-feature-grid__title"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h5>
      <p
        className="ugb-feature-grid__description"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-normal ugb-button--design-link"
          href=""
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": undefined,
              "borderRadius": undefined,
              "color": undefined,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "color": undefined,
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Button text",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    className="ugb-feature-grid__item"
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    <div
      className="ugb-feature-grid__content"
    >
      <h5
        className="ugb-feature-grid__title"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Title",
            }
          }
        />
      </h5>
      <p
        className="ugb-feature-grid__description"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Description for this block. You can use this space for describing your block.",
            }
          }
        />
      </p>
      <div>
        <a
          className="ugb-button ugb-button--align-center ugb-button--size-normal ugb-button--design-link"
          href=""
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": undefined,
              "borderRadius": undefined,
              "color": undefined,
            }
          }
        >
          <span
            className=""
            style={
              Object {
                "color": undefined,
              }
            }
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Button text",
                }
              }
            />
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
